// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin cru community renders without reported comments 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
    <Flex
      style={
        Object {
          "padding": 4,
        }
      }
    />
    <ReportCommentHeaderCard
      count={1}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`admin global community renders without reported comments 1`] = `
<Fragment>
  <Connect(withI18nextTranslation(OnboardingCard))
    type="celebrate"
  />
</Fragment>
`;

exports[`admin renders with 0 reported comments 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`admin user created community renders with 1 reported comment 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`members cru community renders without reported comments 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`members global community renders without reported comments 1`] = `
<Fragment>
  <Connect(withI18nextTranslation(OnboardingCard))
    type="celebrate"
  />
</Fragment>
`;

exports[`members user created community renders without reported comments 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`owner cru community renders with 1 reported comment 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
    <Flex
      style={
        Object {
          "padding": 4,
        }
      }
    />
    <ReportCommentHeaderCard
      count={1}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`owner global community renders without reported comments 1`] = `
<Fragment>
  <Connect(withI18nextTranslation(OnboardingCard))
    type="celebrate"
  />
</Fragment>
`;

exports[`owner renders with 0 reported comments 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`owner user created community renders with 1 reported comment 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
    <Flex
      style={
        Object {
          "padding": 4,
        }
      }
    />
    <ReportCommentHeaderCard
      count={1}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`unread comments card renders comment card 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
    <Flex
      style={
        Object {
          "padding": 4,
        }
      }
    />
    <ReportCommentHeaderCard
      count={1}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`unread comments card renders no comment card when global org 1`] = `
<Fragment>
  <Connect(withI18nextTranslation(OnboardingCard))
    type="celebrate"
  />
</Fragment>
`;

exports[`unread comments card renders no comment card when no new comments 1`] = `
<Fragment>
  <Connect(withI18nextTranslation(OnboardingCard))
    type="celebrate"
  />
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <ReportCommentHeaderCard
      count={1}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;
